# Asenos-iso

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: hostname
iso/airootfs/etc/systemd/system/: asenos-setupwizard.service  asenos-setupwizard@.service
iso/airootfs/etc/systemd/system/getty.target.wants/: asenos-setupwizard@tty1.service
iso/airootfs/etc/systemd/system/getty@tty2.service.d/: override.conf
iso/airootfs/etc/systemd/system/multi-user.target.wants/: asenos-setupwizard.service
iso/airootfs/root/: .automated_script.sh
iso/efiboot/loader/: loader.conf
iso/efiboot/loader/entries/: 01-asenos-x86_64-linux.conf  02-asenos-x86_64-memtest86+.conf
iso/grub/: grub.cfg  loopback.cfg
iso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_pxe.cfg  archiso_sys-linux.cfg  archiso_sys.cfg  archiso_tail.cfg
scripts/: build-wizard.sh  build.sh  mkarchiso.sh  run_archiso.sh  test_wizard.sh
setupwizard/: Cargo.toml  LICENSE  README.md  pyproject.toml
setupwizard/src/: cli_funcs.rs  common.rs  keymap.rs  lib.rs  main.rs  partition.rs  wifi.rs
setupwizard/src/setupwizard/: __init__.py  core.py
setupwizard/tests/: cli_integration_tests.rs  common_tests.rs  keymap_tests.rs  partition_tests.rs  wifi_tests.rs
