[build-system]
requires = ["setuptools>=70", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "asenos-setupwizard"
version = "0.1.0"
description = "Setup wizard cli tool for asenos"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["asenos", "setup", "wizard"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

dependencies = [
  # "requests>=2.32,<3",  # example
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5",
]

# CLI entry points
[project.scripts]
asenos-setupwizard = "setupwizard.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["setupwizard*"]

# Ruff (lint+format)
[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","W","UP","ANN"]
lint.ignore = ["ANN101","ANN102"]  # example
format.quote-style = "double"

# MyPy
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
